--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -25,6 +25,7 @@ a {
   color: $action-color;
   text-decoration: none;
   transition: color $base-duration $base-timing;
+  word-break: break-word;
 
   &:active,
   &:focus,
